--- a/render.yaml
+++ b/render.yaml
@@ -4,19 +4,12 @@ services:
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn bd_Smartgalpon.wsgi --chdir bd_Smartgalpon_api"
+    startCommand: "cd bd_Smartgalpon_api && gunicorn bd_Smartgalpon.wsgi:application"
     envVars:
       - key: DEBUG
         value: False
       - key: SECRET_KEY
         generateValue: true
-      - key: MYSQLDATABASE
-        value: bd_smartgalpon
-      - key: MYSQLUSER
-        value: root
-      - key: MYSQLPASSWORD
-        sync: false
-      - key: MYSQLHOST
-        value: TU_HOST_MYSQL
-      - key: MYSQLPORT
-        value: 3306
+      # Configuración de base de datos - IMPORTANTE
+      - key: DATABASE_URL
+        sync: false  # Esto debes configurarlo en el dashboard de Render
