--- a/render.yaml
+++ b/render.yaml
@@ -10,5 +10,7 @@ services:
         value: False
       - key: SECRET_KEY
         generateValue: true
+      - key: PYTHON_VERSION
+        value: 3.9.0
       - key: DATABASE_URL
-        sync: false
+        sync: false  # Esto lo configurarás manualmente
