--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ pillow==11.3.0
 sqlparse==0.5.3
 typing-extensions==4.15.0
 tzdata==2025.2
+gunicorn==23.0.0
+dj-database-url==2.1.0
+python-decouple==3.8
+django-cors-headers==4.5.0
+whitenoise==6.6.0
